--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ReadMe-Generator",
+  "name": "readme-generator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
